--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <body>
     <div class="mytitle">
-        <h1>내 생애 최고의 영화들</h1>
+        <h1>내 생애 최고의 영화들 모음집</h1>
         <button>영화 기록</button>
     </div>
     <div class="mypost">
