--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <body>
     <div class="mytitle">
-        <h1>내 생애 최고의 영화을 </h1>
+        <h1>내 생애 최고의 영화를 소개합니다</h1>
         <button>영화 기록</button>
     </div>
     <div class="mypost">
